<resources>
    <string name="app_name">MovieRater</string>
    <string name="tvName">Name</string>
    <string name="etMovieName">Enter the title of movie</string>
    <string name="tvDescription">Description</string>
    <string name="etDescription">Enter a short description of the movie</string>
    <string name="tvLanguage">Language</string>
    <string name="rbtnEnglish">English</string>
    <string name="rbtnChinese">Chinese</string>
    <string name="rbtnMalay">Malay</string>
    <string name="rbtnTamil">Tamil</string>
    <string name="tvReleaseDate">Release Date</string>
    <string name="etReleaseDate">Enter release date</string>
    <string name="chkbxNotSuitable">Not suitable for all audience</string>
    <string name="chkbxViolence">Violence</string>
    <string name="chkbxLanguageUsed">Language used</string>
    <string name="btnAddMovie">Add Movie</string>
    <string name="viewMovie_title">Title:</string>
    <string name="viewMovie_overview">Overview:</string>
    <string name="viewMovie_language">Language:</string>
    <string name="viewMovie_releasedate">Release date:</string>
    <string name="viewMovie_suitable">Suitable for children below 13:</string>
    <string name="rateMovie_enterreview">Enter your review for the movie :</string>
    <string name="rateMovie_shareview">Share your view on the show</string>
    <string name="title_activity_rate_movie_activity">rate_movie_activity</string>
    <string name="viewMovie_reviewtitle">Reviews :</string>
    <string name="viewMovie_review">No Reviews yet. \nLong press here to add your review.</string>
    <string name="rateMovie_submit">Submit</string>
    <string name="mainActivity_Add">Add</string>
    <string name="mainActivity_Clear">Clear Entries</string>
    <string name="title_activity_edit__information">Edit_Information</string>
    <string name="edit_page_save">Save</string>
    <string name="edit_page_cancel">Cancel</string>
</resources>
