<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvName"/>

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:hint="@string/etMovieName" android:id="@+id/etMovieName"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/tvDescription"/>

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:hint="@string/etDescription" android:id="@+id/etMovieDescription"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/tvLanguage"/>

    <RadioGroup android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="horizontal" android:id="@+id/rgLanguage">
        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                     android:text="@string/rbtnEnglish"/>
        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                     android:text="@string/rbtnChinese"/>
        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                     android:text="@string/rbtnMalay"/>
        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                     android:text="@string/rbtnTamil"/>
    </RadioGroup>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tvReleaseDate"/>

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/etReleaseDate" android:id="@+id/etReleaseDate"/>

    <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/chkbxNotSuitable" android:id="@+id/chkbxSuitable"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:weightSum="1" android:visibility="invisible" android:id="@+id/llotherBoxes">
        <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/chkbxViolence" android:layout_weight="0.5" android:id="@+id/chkbxLanguage_Used"/>
        <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="0.5" android:text="@string/chkbxLanguageUsed" android:id="@+id/chkbxViolence_Used"/>
    </LinearLayout>

    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
        <Button android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/btnAddMovie" android:onClick="validateForm" android:layout_centerInParent="true"/>
    </RelativeLayout>

</LinearLayout>