<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
              android:layout_height="match_parent" android:orientation="vertical">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:layout_width="match_parent" android:layout_height="wrap_content"
                   android:layout_centerInParent="true" android:src="@drawable/image_resize"/>
    </RelativeLayout>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/viewMovie_title"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/viewMovie_title"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/viewMovie_overview"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/viewMovie_overview"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/viewMovie_reviewtitle"/>
    <RatingBar android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/rbviewMovie_RB"
               android:visibility="gone" android:isIndicator="true"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/viewMovie_review" android:id="@+id/viewMovie_reviews"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/viewMovie_language"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/viewMovie_language"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/viewMovie_releasedate"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/viewMovie_releaseDate"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/viewMovie_suitable"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/viewMovie_suitable"/>

</LinearLayout>